# scratch-realtime-earthquake-viewer-page

./: .gitattributes  README.md  extensions-cache.json  hash  index.html  index.js  manifest.json  package-lock.json  package.json  script.js  sw.js  terms.md  turbowarp-packager-settings.json
.github/workflows/: publish.yaml
assets/: LICENSE  project.json
docs/: _config.yml  hash  index.js  sw.js
src-tauri/: .gitignore  Cargo.toml  fullscreen.js  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
